Submenu hidden if there is no submenu; padding correction on smaller screen

--- a/sources/stylesheets/custom_styles.scss
+++ b/sources/stylesheets/custom_styles.scss
@@ -289,7 +289,8 @@
   .feature-section { min-height: 235px;}
 }
 @media screen and (max-width: 1024px) {
-  .content-inner { padding: 25px 40px;}
+  .content-inner { padding: 40px;}
+  .menu-sub { padding: 40px 40px 0;}
 }
 @media screen and (max-width: 768px) {
   .mobilemenu-open #mobile-menu, .mobile-menu-toggler { display: block;}
@@ -307,11 +308,12 @@
     color: #fff;
     text-decoration: none;
   }
-  .site-header { padding-bottom: 30px;}
+  .site-header { padding-bottom: 30px 25px;}
   .site-container .wrap { padding: 0;}
-  .menu-sub { padding-left: 25px;padding-right: 25px;}
-  .menu-sub { text-align: left;}
-  .content-inner { padding: 25px 25px;}
+  .menu-sub { padding: 25px 25px 0;text-align: left;}
+  .menu-sub li { font-size: 18px;margin: 0;display: block;padding: 10px;border-bottom: 1px solid #cacaca;}
+  .menu-sub li:first-child { padding: 0 10px 10px;}
+  .content-inner { padding: 40px 25px;}
   .content-area { font-size: 18px;line-height: 1.3;}
   .site-footer { padding: 40px 25px;}
   .site-search-btn {
@@ -329,11 +331,8 @@
     display: inline-block;
     padding: 0 10px 0 0;
   }
-  .site-header .header-top { padding: 15px 0 25px;margin-bottom: 20px;}
+  .site-header .header-top { padding: 15px 0 25px;margin-bottom: 30px;}
   .menu-horizontal { display: block;}
-  .menu-sub li { font-size: 18px;margin: 0;display: block;padding: 10px;border-top: 1px solid #cacaca;
-}
-
 }
 @media screen and (min-width: 601px) and (max-width: 960px) {
   .public .voog-reference-enabled .feature-section:last-child { padding-bottom: 50px;}
