--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -200,9 +200,9 @@ body {
 
 .menu-sub {
   text-align: center;
-  padding-top: 50px;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding: 80px 80px 0;
+  margin: 0;
+  display: block;
 }
 .menu-sub .menu-cms {
   margin-left: 15px;
@@ -215,6 +215,13 @@ body {
 .menu-sub a {
   vertical-align: middle;
   border-bottom: 0;
+  color: #898989;
+}
+.menu-sub a:hover {
+  color: #000;
+}
+.menu-sub .selected {
+  color: #000;
 }
 
 .scheme-light .edy-empty-bordered {
@@ -1635,7 +1642,11 @@ body {
 }
 @media screen and (max-width: 1024px) {
   .content-inner {
-    padding: 25px 40px;
+    padding: 40px;
+  }
+
+  .menu-sub {
+    padding: 40px 40px 0;
   }
 }
 @media screen and (max-width: 768px) {
@@ -1668,7 +1679,7 @@ body {
   }
 
   .site-header {
-    padding-bottom: 30px;
+    padding-bottom: 30px 25px;
   }
 
   .site-container .wrap {
@@ -1676,16 +1687,24 @@ body {
   }
 
   .menu-sub {
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-
-  .menu-sub {
+    padding: 25px 25px 0;
     text-align: left;
   }
 
+  .menu-sub li {
+    font-size: 18px;
+    margin: 0;
+    display: block;
+    padding: 10px;
+    border-bottom: 1px solid #cacaca;
+  }
+
+  .menu-sub li:first-child {
+    padding: 0 10px 10px;
+  }
+
   .content-inner {
-    padding: 25px 25px;
+    padding: 40px 25px;
   }
 
   .content-area {
@@ -1725,19 +1744,11 @@ body {
 
   .site-header .header-top {
     padding: 15px 0 25px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   .menu-horizontal {
     display: block;
-  }
-
-  .menu-sub li {
-    font-size: 18px;
-    margin: 0;
-    display: block;
-    padding: 10px;
-    border-top: 1px solid #cacaca;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 960px) {
